--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,6 +1,14 @@
 <div id="mySidenav" class="sidenav">
-    <a routerLink = 'characters' id="characters">Character</a>
-    <a routerLink = 'episodes' id="episodes">Episodes</a>
-    <a routerLink = 'locations' id="locations"> Locations</a>
-    <a routerLink = 'quotes' id="quotes">Quotes</a>
+  <div id="characters" class="click">
+    <a routerLink="characters">Character</a>
   </div>
+  <div id="episodes" class="click">
+    <a routerLink="episodes">Episodes</a>
+  </div>
+  <div id="locations" class="click">
+    <a routerLink="locations"> Locations</a>
+  </div>
+  <div id="quotes" class="click">
+    <a routerLink="quotes">Quotes</a>
+  </div>
+</div>
