--- a/src/app/episodes/episode/episode.component.html
+++ b/src/app/episodes/episode/episode.component.html
@@ -1,16 +1,14 @@
 <div class="container" *ngIf="episode">
   <div class="all">
     <h1>{{ episode.name }}</h1>
-    <div class="row">
-      <div class="col">
+    <div class="row image">
+      <div class="col-md-12 col-lg-6">
         <img src="{{ episode.img_url }}" />
       </div>
-      <div class="col">
-        <div class="info">
-          <p>Director: {{ episode.director }}</p>
-          <p>Writer: {{ episode.writer }}</p>
-          <p>Air Date: {{ episode.air_date }}</p>
-        </div>
+      <div class="col info">
+        <p>Director: {{ episode.director }}</p>
+        <p>Writer: {{ episode.writer }}</p>
+        <p>Air Date: {{ episode.air_date }}</p>
         <div class="characters"></div>
       </div>
     </div>
