--- a/src/app/episodes/episode/mini-character/mini-character.component.html
+++ b/src/app/episodes/episode/mini-character/mini-character.component.html
@@ -1,7 +1,4 @@
-
-    <div class="image">
-        <img src ={{character.img_url}}>
-        <h1>{{character.name}}</h1>
-    </div>
-
-
+<div class="image">
+  <img src="{{ character.img_url }}" />
+  <h1>{{ character.name }}</h1>
+</div>
