--- a/src/app/episodes/episodes.component.scss
+++ b/src/app/episodes/episodes.component.scss
@@ -20,7 +20,7 @@
     border: none;
     outline: none;
     color: white;
-    padding: 14px 16px;
+    padding: 15px;
     background-color: inherit;
     font-family: inherit;
     margin: 0;
@@ -55,6 +55,11 @@
 
 .season:hover .episodes {
   display: block;
+}
+
+h1{
+  font-size: 20px;
+  color: white;
 }
 
 
