--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,4 @@
-<p>home works!</p>
+<h1>Welcome!</h1>
+<h2>It's a my simply Final Space app, that I created for fun!</h2>
+<h3 class="bigScreen"><--------------------------------------------- Just use this navbar!</h3>
+<h3 class="smallScreen">Just use this navbar, that you see above!</h3>
