--- a/src/app/episodes/episode/episode.component.html
+++ b/src/app/episodes/episode/episode.component.html
@@ -25,11 +25,7 @@
           [character]="character"
         ></app-mini-character>
       </div>
-      <div id="loading"
-        class="div"
-        *ngIf="isLoading"
-        
-      >
+      <div id="loading" class="div" *ngIf="isLoading">
         <app-loading></app-loading>
       </div>
     </div>
