--- a/src/app/locations/location/resident/resident.component.html
+++ b/src/app/locations/location/resident/resident.component.html
@@ -1,4 +1,4 @@
 <div id="all">
-<img src ={{resident.img_url}}>
+<img src ={{resident.img_url}} [routerLink]="['/characters', resident.id]">
 <h6>{{resident.name}}</h6>
 </div>
