--- a/src/app/locations/location/resident/resident.component.scss
+++ b/src/app/locations/location/resident/resident.component.scss
@@ -9,4 +9,10 @@ img {
     border: 4px solid black;
     width: 50%;
     border-radius: 100%;
+    transition: 0.5s ease;
 }
+
+img:hover{
+    transform: scale(1.3);
+}
+
